# image-library

./: .gitignore  README.md  meson.build
include/: image-decoder.h  image-encoder.h  image.h
src/: image-decoder.cpp  image-encoder-jpeg.c  image-encoder-jpeg.h  image-encoder-png.c  image-encoder-png.h  image-encoder.cpp  image.cpp
